Adding exact dates for SHD

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <img src="https://d13yacurqjgara.cloudfront.net/users/4908/screenshots/2570659/rocket.gif" width=50% height=50%>
 
   <div class="jumbotron">
-    <h1>Science Hack Day India 2017, Coming Soon!</h1>
-    <h1>October 2017</h1>
+    <h1>Science Hack Day India 2017</h1>
+    <h1>14th and 15th October 2017</h1>
     <h3><a href="2016">Click here for the 2016 site</a></h3>
   </div>
   </center>
