--- a/index.html
+++ b/index.html
@@ -1,30 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <meta name="description" content="Science Hack Day is a two-day event where anyone excited about making weird, silly or serious things with science comes together in the same physical space to see what they can prototype within 30 consecutive hours.">
 
-  <title>Science Hack Day India</title>
+  <meta name="keywords" content="Science Hack, Science Hack India, Maker, Hacking, Science Workshops, Student Workshops, Hack Day Belgaum, Science Belagavi, SHD, Hackathon">
+  <meta name="author" content="">
+
+  <title>Science Hack Day India 2017</title>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+  <!-- Bootstrap Core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <link href="css/business-frontpage.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">
+
+
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
+
 </head>
 
+<body>
 
-<body style="font-family: 'Pangolin', cursive; background-color: #f3f5f8;">
-<center>
-  <img src="https://d13yacurqjgara.cloudfront.net/users/4908/screenshots/2570659/rocket.gif" width=50% height=50%>
+  <!-- Navigation -->
+  <nav class="navbar navbar navbar-fixed-top" role="navigation">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="in_progress.html">SHD 2017</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li>
+            <a href="in_progress.html">Mentors</a>
+          </li>
+          <li>
+            <a href="in_progress.html">Project Ideas</a>
+          </li>
+          <li>
+            <a href="in_progress.html">Workshops</a>
+          </li>
+          <li>
+            <a href="in_progress.html">Team</a>
+          </li>
+          <li>
+            <a href="in_progress.html">Sponsors</a>
+          </li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="in_progress.html">Schedule
+              <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="in_progress.html">SHD Schedule</a></li>
+                <li><a href="in_progress.html">Workshops Schedule</a></li>
+              </ul>
+            </li>
+          <li>
+            <a href="in_progress.html">Global SHD</a>
+          </li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="in_progress.html">Previous SHD
+              <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="2016/index.html">SHD 2016</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container -->
+    </nav>
 
-  <div class="jumbotron">
-    <h1>Science Hack Day India 2017</h1>
-    <h1>14th and 15th October 2017</h1>
-    <h3><a href="2016">Click here for the 2016 site</a></h3>
-  </div>
-  </center>
+    <!-- Image Background Page Header -->
+    <!-- Note: The background image is set within the business-casual.css file. -->
+    <header class="business-header">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <h1 class="tagline">Science Hack Day India 2017</h1>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- Page Content -->
+    <div class="container">
+      <hr>
+      <div class="row">
+        <div class="col-sm-8">
+          <h2>What is Science Hack Day?</h2>
+          <p>Science Hack Day is a two-day event where anyone excited about making weird, silly or serious things with science comes together in the same physical space to see what they can prototype within 30 consecutive hours.</p>
+          <p>The mission of Science Hack Day is to get excited and make things with science! People organically form multidisciplinary teams over the course of a weekend: particle physicists team up with designers, marketers join forces with open source rocket scientists, writers collaborate with molecular biologists, and developers partner with school kids. By collaborating on focused tasks during this short period, small groups of hackers are capable of producing remarkable results.</p>
+          <p>
+            <a class="btn btn-primary btn-lg" href="in_progress.html">Register for SHD 2017 &raquo;</a> &nbsp;&nbsp;&nbsp;
+            <a class="btn btn-primary btn-lg" href="in_progress.html">Submit your Idea &raquo;</a>
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <h2>When?</h2>
+          <address>
+            <strong>13th, 14th and 15th October 2017</strong>
+            <br>Sankalp Bhoomi Resort
+            <br>Belgaum, Karnataka, India
+            <br>
+          </address>
+          <address>
+            <abbr title="Email">E:</abbr> <a href="mailto:shdbelgaum@gmail.com">shdbelgaum@gmail.com</a>
+          </address>
+          <a href="https://www.facebook.com/sciencehackdayindia/"><i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i></a> &nbsp;&nbsp;
+          <a href="https://twitter.com/SHD_India"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <!-- /.row -->
+
+      <hr>
+
+      <div class="row">
+        <div class="col-sm-4 text-center">
+          <img class="img-circle img-responsive img-center" src="media/images/shd2016.png" alt="">
+          <h2>Hack Day</h2>
+          <p>Science Hack Day is organized with the motive of collaborating on focused tasks during a short period of time, small groups of hackers are capable of producing remarkable results given the right conditions</p>
+        </div>
+        <div class="col-sm-4 text-center">
+          <img class="img-circle img-responsive img-center" src="media/images/workshops2016.png">
+          <h2>Student Workshops</h2>
+          <p>Workshops will run parallel to the main event. About 150 students from various highschools in and around Belgaum will participate in the workshops. A dedicated team of volunteers, mainly engineering students and Science teachers, will conduct these hands on workshops.</p>
+        </div>
+        <div class="col-sm-4 text-center">
+          <img class="img-circle img-responsive img-center" src="media/images/becomeasponsor.gif" widht="250" height="250" alt="">
+          <h2>Sponsors</h2>
+          <p>Sponsorship helps keep Science Hack Day a free and fun event for the community to attend. In addition to being free to attend, Science Hack Day is organized by volunteers and wouldn’t be possible without sponsors.</p>
+        </div>
+      </div>
+      <!-- /.row -->
+
+      <hr>
+
+      <!-- Footer -->
+      <footer>
+        <div class="row">
+          <div class="col-lg-12">
+            <p>Science Hack Day Established 2010. Organized by the community.</p>
+          </div>
+        </div>
+        <!-- /.row -->
+      </footer>
+
+    </div>
+    <!-- /.container -->
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
   </body>
 
   </html>
