Added registration link

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <p>Science Hack Day is a two-day event where anyone excited about making weird, silly or serious things with science comes together in the same physical space to see what they can prototype within 30 consecutive hours.</p>
           <p>The mission of Science Hack Day is to get excited and make things with science! People organically form multidisciplinary teams over the course of a weekend: particle physicists team up with designers, marketers join forces with open source rocket scientists, writers collaborate with molecular biologists, and developers partner with school kids. By collaborating on focused tasks during this short period, small groups of hackers are capable of producing remarkable results.</p>
           <p>
-            <a class="btn btn-primary btn-lg" href="in_progress.html">Register for SHD 2017 &raquo;</a> &nbsp;&nbsp;&nbsp;
+            <a class="btn btn-primary btn-lg" href="https://www.instamojo.com/shdindia/?ref=offer_page">Register for SHD 2017 &raquo;</a> &nbsp;&nbsp;&nbsp;
             <a class="btn btn-primary btn-lg" href="in_progress.html">Submit your Idea &raquo;</a>
           </p>
         </div>
