--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
         <div class="col-sm-4">
           <h2>When?</h2>
           <address>
-            <strong>13th, 14th and 15th October 2017</strong>
+            <strong>14th and 15th October 2017</strong>
+            <br>Day-0 : 13th October (for resident hackers) 
             <br>Sankalp Bhoomi Resort
             <br>Belgaum, Karnataka, India
             <br>
