--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         <div class="col-sm-4">
           <h2>When?</h2>
           <address>
-            <strong>14th and 15th October 2017</strong>
-            <br>Day-0 : 13th October (for resident hackers) 
+            <strong>Main Event : 14th and 15th October 2017</strong>
+            <br><strong>Pre-Event Activities Day-0</strong> : 13th October (Only for resident hackers) 
             <br>Sankalp Bhoomi Resort
             <br>Belgaum, Karnataka, India
             <br>
