--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <h2>When?</h2>
           <address>
             <strong>Main Event : 14th and 15th October 2017</strong>
-            <br><strong>Pre-Event Activities Day-0</strong> : 13th October (Only for resident hackers) 
+            <br><strong>Pre-Event Day-0</strong> : 13th October (Only for resident hackers) 
             <br>Sankalp Bhoomi Resort
             <br>Belgaum, Karnataka, India
             <br>
