Link to hack submission form (#6)
* Update index.html

* Update index.html

* Update index.html

* Added link to hack submission form

--- a/index.html
+++ b/index.html
@@ -112,13 +112,14 @@
           <p>The mission of Science Hack Day is to get excited and make things with science! People organically form multidisciplinary teams over the course of a weekend: particle physicists team up with designers, marketers join forces with open source rocket scientists, writers collaborate with molecular biologists, and developers partner with school kids. By collaborating on focused tasks during this short period, small groups of hackers are capable of producing remarkable results.</p>
           <p>
             <a class="btn btn-primary btn-lg" href="https://www.instamojo.com/shdindia/?ref=offer_page">Register for SHD 2017 &raquo;</a> &nbsp;&nbsp;&nbsp;
-            <a class="btn btn-primary btn-lg" href="in_progress.html">Submit your Idea &raquo;</a>
+            <a class="btn btn-primary btn-lg" href="https://goo.gl/33BSFg">Submit your Idea &raquo;</a>
           </p>
         </div>
         <div class="col-sm-4">
           <h2>When?</h2>
           <address>
-            <strong>13th, 14th and 15th October 2017</strong>
+            <strong>Main Event : 14th and 15th October 2017</strong>
+            <br><strong>Pre-Event Day-0</strong> : 13th October (Only for resident hackers) 
             <br>Sankalp Bhoomi Resort
             <br>Belgaum, Karnataka, India
             <br>
