--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="in_progress.html">SHD 2017</a>
+        <a class="navbar-brand" href="#">SHD 2017</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -58,6 +58,9 @@
           </li>
           <li>
             <a href="in_progress.html">Workshops</a>
+          </li>
+          <li>
+            <a href="travel.html">Travel</a>
           </li>
           <li>
             <a href="in_progress.html">Team</a>
@@ -119,7 +122,7 @@
           <h2>When?</h2>
           <address>
             <strong>Main Event : 14th and 15th October 2017</strong>
-            <br><strong>Pre-Event Day-0</strong> : 13th October (Only for resident hackers) 
+            <br><strong>Pre-Event Day-0</strong> : 13th October (Only for resident hackers)
             <br>Sankalp Bhoomi Resort
             <br>Belgaum, Karnataka, India
             <br>
