--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">SHD 2017</a>
+        <a class="navbar-brand" href="index.html">SHD 2017</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -80,7 +80,7 @@
             <a href="in_progress.html">Global SHD</a>
           </li>
           <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="in_progress.html">Previous SHD
+            <a class="dropdown-toggle" data-toggle="dropdown" href="http://sciencehackday.org/">Previous SHD
               <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="2016/index.html">SHD 2016</a></li>
@@ -163,7 +163,9 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
+            <center>
             <p>Science Hack Day Established 2010. Organized by the community.</p>
+          </center>
           </div>
         </div>
         <!-- /.row -->
