Adding registration link

--- a/in_progress.html
+++ b/in_progress.html
@@ -16,7 +16,7 @@
     <h1>Work in Progress</h1>
     <p>We are in the process of getting this information across to you.</p>
     <p>In the meanwhile, Have you registered for Science Hack Day 2017?</p>
-    <a class="btn btn-primary btn-lg" href="#">Register for SHD 2017 &raquo;</a>
+    <a class="btn btn-primary btn-lg" href="https://www.instamojo.com/shdindia/?ref=offer_page">Register for SHD 2017 &raquo;</a>
     <a class="btn btn-primary btn-lg" href="index.html">Go to main page &raquo;</a>
 
   </div>
