--- a/coc.html
+++ b/coc.html
@@ -95,72 +95,29 @@
       </div>
       <!-- /.container -->
     </nav>
-
-    <!-- Image Background Page Header -->
-    <!-- Note: The background image is set within the business-casual.css file. -->
-    <header class="business-header">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <h1 class="tagline">Science Hack Day India 2017</h1>
-          </div>
-        </div>
-      </div>
-    </header>
-
     <!-- Page Content -->
     <div class="container">
-      <hr>
-      <div class="row">
-        <div class="col-sm-8">
-          <h2>What is Science Hack Day?</h2>
-          <p>Science Hack Day is a two-day event where anyone excited about making weird, silly or serious things with science comes together in the same physical space to see what they can prototype within 30 consecutive hours.</p>
-          <p>The mission of Science Hack Day is to get excited and make things with science! People organically form multidisciplinary teams over the course of a weekend: particle physicists team up with designers, marketers join forces with open source rocket scientists, writers collaborate with molecular biologists, and developers partner with school kids. By collaborating on focused tasks during this short period, small groups of hackers are capable of producing remarkable results.</p>
-          <p>
-            <a class="btn btn-primary btn-lg" href="https://www.instamojo.com/shdindia/?ref=offer_page">Register for SHD 2017 &raquo;</a> &nbsp;&nbsp;&nbsp;
-            <a class="btn btn-primary btn-lg" href="https://goo.gl/33BSFg">Submit your Idea &raquo;</a>
-          </p>
-        </div>
-        <div class="col-sm-4">
-          <h2>When?</h2>
-          <address>
-            <strong>Main Event : 14th and 15th October 2017</strong>
-            <br><strong>Pre-Event Day-0</strong> : 13th October (Only for resident hackers)
-            <br>Sankalp Bhoomi Resort
-            <br>Belgaum, Karnataka, India
-            <br>
-          </address>
-          <address>
-            <abbr title="Email">E:</abbr> <a href="mailto:shdbelgaum@gmail.com">shdbelgaum@gmail.com</a>
-          </address>
-          <a href="https://www.facebook.com/sciencehackdayindia/"><i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i></a> &nbsp;&nbsp;
-          <a href="https://twitter.com/SHD_India"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
-        </div>
-      </div>
-      <!-- /.row -->
 
-      <hr>
+      <h2>Science Hack Day India</h2>
+      <h1>Code of Conduct</h1>
+      <h3>The short version</h3>
+      <p>Science Hack Day India is an inclusive event based on treating all individuals respectfully, regardless of gender, sexual orientation, age, disability, ethnicity and religion (or lack thereof). We feel it is important to make clear that harassment of any kind will not be tolerated and that if any issues arise they will be dealt with in a serious manner. Fortunately, we have never had a problem with this and the event organisers are actively committed to making sure  that this remain the case. Science Hack Day India has always been a friendly social event, so if that isn’t something you can get behind please don’t come. If you come and act nasty or mean, we will ask you to leave. Be nice. Be considerate. Be civil. It’s easy.</p>
+      <h3>The Longer version</h3>
+      <p>Science Hack Day India is dedicated to providing a harassment-free experience for everyone, regardless of gender, gender identity and expression, sexual orientation, disability, physical appearance, body size, race, age or religion. We do not tolerate harassment of Science Hack Day India participants in any form. Event participants violating these rules may be sanctioned or expelled from the event at the discretion of the event organizers. Harassment includes verbal comments that reinforce social structures of domination related to gender, gender identity and expression, sexual orientation, disability, physical appearance, body size, race, age, religion, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention. Participants asked to stop any harassing behavior are expected to comply immediately. If a participant engages in harassing behavior, the organisers may take any action they deem appropriate, including warning the offender or expulsion from the event. If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of the organising team immediately. The organising team will have checked you in and will be doing all the announcements during the event. The organising team will be happy to help participants contact venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the event. We really value your attendance. We expect participants to follow these rules during the entirety of the event.</p>
 
-      <div class="row">
-        <div class="col-sm-4 text-center">
-          <img class="img-circle img-responsive img-center" src="media/images/shd2016.png" alt="">
-          <h2>Hack Day</h2>
-          <p>Science Hack Day is organized with the motive of collaborating on focused tasks during a short period of time, small groups of hackers are capable of producing remarkable results given the right conditions</p>
-        </div>
-        <div class="col-sm-4 text-center">
-          <img class="img-circle img-responsive img-center" src="media/images/workshops2016.png">
-          <h2>Student Workshops</h2>
-          <p>Workshops will run parallel to the main event. About 150 students from various highschools in and around Belgaum will participate in the workshops. A dedicated team of volunteers, mainly engineering students and Science teachers, will conduct these hands on workshops.</p>
-        </div>
-        <div class="col-sm-4 text-center">
-          <img class="img-circle img-responsive img-center" src="media/images/becomeasponsor.gif" widht="250" height="250" alt="">
-          <h2>Sponsors</h2>
-          <p>Sponsorship helps keep Science Hack Day a free and fun event for the community to attend. In addition to being free to attend, Science Hack Day is organized by volunteers and wouldn’t be possible without sponsors.</p>
-        </div>
-      </div>
-      <!-- /.row -->
+      <h3>Contact Information</h3>
+      <p>If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff. Event staff will be wearing "SHD Organizer" badge.
+      If the matter is especially urgent, please call/contact any of these individuals:</p>
+      <ul>
+      <li>Praveen Patil at +91-9482543803</li>
+      <li>Rahul Khanolkar at +91-9986689985</li>
+      <li>Hitesh Dharamdasani at +91-9880936126</li>
+      <li>Shrikrishna Prabhu at +91-9845680553</li>
+    </ul>
+      <p>Event staff will be happy to help participants contact college/venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of SHD. We value your attendance.
+      License</p>
+      <p>This Code of Conduct was forked from the  policy from the  Science Hack Day Dublin </p>
 
-      <hr>
 
       <!-- Footer -->
       <footer>
