--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <a href="travel.html">Travel</a>
           </li>
           <li>
-            <a href="in_progress.html">Team</a>
+            <a href="team.html">Team</a>
           </li>
           <li>
             <a href="in_progress.html">Sponsors</a>
@@ -147,7 +147,7 @@
         <div class="col-sm-4 text-center">
           <img class="img-circle img-responsive img-center" src="media/images/workshops2016.png">
           <h2>Student Workshops</h2>
-          <p>Workshops will run parallel to the main event. About 150 students from various highschools in and around Belgaum will participate in the workshops. A dedicated team of volunteers, mainly engineering students and Science teachers, will conduct these hands on workshops.</p>
+          <p>Workshops will run parallel to the main event. About 200 students from various highschools in and around Belgaum will participate in the workshops. A dedicated team of volunteers, mainly engineering students and Science teachers, will conduct these hands on workshops.</p>
         </div>
         <div class="col-sm-4 text-center">
           <img class="img-circle img-responsive img-center" src="media/images/becomeasponsor.gif" widht="250" height="250" alt="">
