--- a/mentors.html
+++ b/mentors.html
@@ -169,12 +169,11 @@
             <div class="col-lg-8">
                 <h3 id="hitesh">Hitesh Dharamdasani</h3>
                 <h4>Informant Networks</h4>
-                <p>Defends Networks and fights Cyber Crime. Loves Python and internets, Founder Informant Networks. Can be bribed by food</p>
+                <p>Hitesh is MS in Science in Information Security and Assurance from George Mason University, Fairfax, Virginia. His interests lie in the intersection of Computer Security, Economics of Cyber crime and Machine Learning. He is also a part of the Center for Evidence-based Security Research (CESR). Founder Informant Networks, a company that focuses on solving problems in Network Security particularly against insider theft.</p>
                 <a class="btn btn-primary" href="#crashnburn">Hack Idea : Crash and Burn <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
 <!-- /.row -->
-
         <hr>
         <!-- Mentor Three -->
         <div class="row">
@@ -409,6 +408,7 @@
                 <h3 id="visualassistor">Project: 
                 <font color="#2315AF">Visual Assistor</font></h3>
                 <h4>Mentor : <a href="#saptak">Suryadeep Pal</a></h4>
+                <p>Tools used : Raspberry Pi, Web Cam Module, Microphone, Microsoft Azure Cognitive Services, Heroku, Imagebin, MongoDB</p>
                 <p>This device uses the power of a regular web camera, which takes pictures and then after processing describes the whole scene to the user. This utility basically describes the front scenario thus helping a visually challenged person to get the view in front without getting any additional help.  </p>
                 <a class="btn btn-primary" href="#">Join this project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
