--- a/coc.html
+++ b/coc.html
@@ -50,11 +50,9 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
+          
           <li>
-            <a href="in_progress.html">Mentors</a>
-          </li>
-          <li>
-            <a href="in_progress.html">Project Ideas</a>
+            <a href="mentors.html">Projects and Mentors</a>
           </li>
           <li>
             <a href="in_progress.html">Workshops</a>
