--- a/mentors.html
+++ b/mentors.html
@@ -54,7 +54,7 @@
             <a href="mentors.html">Projects and Mentors</a>
           </li>
           <li>
-            <a href="in_progress.html">Workshops</a>
+            <a href="workshops.html">Workshops</a>
           </li>
           <li>
             <a href="travel.html">Travel</a>
