update  workshops.html

--- a/workshops.html
+++ b/workshops.html
@@ -101,7 +101,7 @@
           <div class="col-lg-12">
             <div class="jumbotron">
               <p>Along with amazing hacking activities we also have Science Workshops for Highschool kids. Workshops will run parallel to the main event. About 200 students from various highschools in and around Belgaum will participate in the workshops. A dedicated team of volunteers, mainly engineering students and Science teachers, will conduct these hands-on workshops.</p>
-              <p>The first hands-on workshop is making <strong>Science Toys from Trash</strong>  and the other workshop is <strong>Soldering: Making LED SHD India Badge</strong>. In these workshops kids will learn basics of soldering and will be actively engaged in making science toys involving various scientific phenomena. </p>
+              <p>The first hands-on workshop is making <strong>Science Toys from Trash</strong>  and the other workshop is <strong>Soldering: LED SHD India Badge</strong>. In these workshops kids will learn basics of soldering and will be actively engaged in making science toys involving various scientific phenomena. </p>
                <p>All the material required for the hands-on workshops will be provided to the students.</p>
                
                <p><strong>For workshop registrations contact</strong></p>
