update  scheduleworkshops.html

--- a/scheduleworkshops.html
+++ b/scheduleworkshops.html
@@ -158,7 +158,7 @@
 
             <ul>04:00 <span id="tab">Snack time... People visit the exhibit area.</span></ul>
             
-			<ul>04:30 <span id="tab">Valedictory function. Winning teams announced & given awards/medals</span></ul>
+			<ul>04:30 <span id="tab">Valedictory function. Winning teams announced & given SHD India medals</span></ul>
 			
             <ul>05:30 <span id="tab">Parents take the kids home</span></ul>
 
