update link to schedule in index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="in_progress.html">SHD Schedule</a></li>
-                <li><a href="in_progress.html">Workshops Schedule</a></li>
+                <li><a href="scheduleworkshops.html">Workshops Schedule</a></li>
               </ul>
             </li>
           <li>
