--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
             <a href="in_progress.html">Sponsors</a>
           </li>
           <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="in_progress.html">Schedule
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Schedule
               <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="in_progress.html">SHD Schedule</a></li>
+                <li><a href="schedule.html">SHD Schedule</a></li>
                 <li><a href="scheduleworkshops.html">Workshops Schedule</a></li>
               </ul>
             </li>
           <li>
-            <a href="in_progress.html">Global SHD</a>
+            <a href="http://sciencehackday.org/">Global SHD</a>
           </li>
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="http://sciencehackday.org/">Previous SHD
