--- a/travel.html
+++ b/travel.html
@@ -55,27 +55,27 @@
             <a href="mentors.html">Projects and Mentors</a>
           </li>
           <li>
-            <a href="in_progress.html">Workshops</a>
+            <a href="workshops.html">Workshops</a>
           </li>
           <li>
             <a href="travel.html">Travel</a>
           </li>
           <li>
-            <a href="in_progress.html">Team</a>
+            <a href="team.html">Team</a>
           </li>
           <li>
             <a href="in_progress.html">Sponsors</a>
           </li>
           <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="in_progress.html">Schedule
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Schedule
               <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="in_progress.html">SHD Schedule</a></li>
-                <li><a href="in_progress.html">Workshops Schedule</a></li>
+                <li><a href="schedule.html">SHD Schedule</a></li>
+                <li><a href="scheduleworkshops.html">Workshops Schedule</a></li>
               </ul>
             </li>
             <li>
-              <a href="in_progress.html">Global SHD</a>
+              <a href="http://sciencehackday.org/">Global SHD</a>
             </li>
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="in_progress.html">Previous SHD
