--- a/coc.html
+++ b/coc.html
@@ -35,7 +35,7 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -50,7 +50,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          
+
           <li>
             <a href="mentors.html">Projects and Mentors</a>
           </li>
