--- a/travel.html
+++ b/travel.html
@@ -35,7 +35,7 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -45,12 +45,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">SHD 2017</a>
+        <a class="navbar-brand" href="index.html">SHD 2017</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          
+
           <li>
             <a href="mentors.html">Projects and Mentors</a>
           </li>
@@ -132,7 +132,7 @@
                 <h4>By Air</h4>
                 <p>SpiceJet operates multiple flights to/from Belgaum that provide connectivity to all major cities.</p>
 
-                <img src="media/images/spicejet_belgaum_flights.png"> 
+                <img src="media/images/spicejet_belgaum_flights.png">
               </div>
             </div>
 
