--- a/workshops.html
+++ b/workshops.html
@@ -35,7 +35,7 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -45,12 +45,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">SHD 2017</a>
+        <a class="navbar-brand" href="index.html">SHD 2017</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          
+
           <li>
             <a href="mentors.html">Projects and Mentors</a>
           </li>
@@ -103,7 +103,7 @@
               <p>Along with amazing hacking activities we also have Science Workshops for Highschool kids. Workshops will run parallel to the main event. About 200 students from various highschools in and around Belgaum will participate in the workshops. A dedicated team of volunteers, mainly engineering students and Science teachers, will conduct these hands-on workshops.</p>
               <p>The first hands-on workshop is making <strong>Science Toys from Trash</strong>  and the other workshop is <strong>Soldering: LED SHD India Badge</strong>. In these workshops kids will learn basics of soldering and will be actively engaged in making science toys involving various scientific phenomena. </p>
                <p>All the material required for the hands-on workshops will be provided to the students.</p>
-               
+
                <p><strong>For workshop registrations contact</strong></p>
                <p> Minal +91 8884727334</p>
                <p> Anuja +91 9741081667</p>
