--- a/schedule.html
+++ b/schedule.html
@@ -45,7 +45,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">SHD 2017</a>
+        <a class="navbar-brand" href="index.html">SHD 2017</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -61,6 +61,9 @@
             <a href="travel.html">Travel</a>
           </li>
           <li>
+            <a href="coc.html">Code of Conduct</a>
+          </li>
+          <li>
             <a href="team.html">Team</a>
           </li>
           <li>
@@ -74,18 +77,18 @@
                 <li><a href="scheduleworkshops.html">Workshops Schedule</a></li>
               </ul>
             </li>
-            <li>
-              <a href="http://sciencehackday.org/">Global SHD</a>
+          <li>
+            <a href="http://sciencehackday.org/">Global SHD</a>
+          </li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="http://sciencehackday.org/">Previous SHD
+              <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="2016/index.html">SHD 2016</a></li>
+              </ul>
             </li>
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="in_progress.html">Previous SHD
-                <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="2016/index.html">SHD 2016</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
+          </ul>
+        </div>
           <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
