--- a/workshops.html
+++ b/workshops.html
@@ -61,32 +61,33 @@
             <a href="travel.html">Travel</a>
           </li>
           <li>
-            <a href="in_progress.html">Team</a>
+            <a href="coc.html">Code of Conduct</a>
+          </li>
+          <li>
+            <a href="team.html">Team</a>
           </li>
           <li>
             <a href="in_progress.html">Sponsors</a>
           </li>
           <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="in_progress.html">Schedule
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Schedule
               <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="in_progress.html">SHD Schedule</a></li>
-                <li><a href="in_progress.html">Workshops Schedule</a></li>
+                <li><a href="schedule.html">SHD Schedule</a></li>
+                <li><a href="scheduleworkshops.html">Workshops Schedule</a></li>
               </ul>
             </li>
-            <li>
-              <a href="in_progress.html">Global SHD</a>
+          <li>
+            <a href="http://sciencehackday.org/">Global SHD</a>
+          </li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="http://sciencehackday.org/">Previous SHD
+              <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="2016/index.html">SHD 2016</a></li>
+              </ul>
             </li>
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="in_progress.html">Previous SHD
-                <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="2016/index.html">SHD 2016</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-          <!-- /.navbar-collapse -->
+          </ul>
         </div>
         <!-- /.container -->
       </nav>
