--- a/index.html
+++ b/index.html
@@ -189,7 +189,21 @@
             <p style="text-align:center; color:#">Amazing People/Organizations helping us to make SHD India, happen !</p>
             <br>
           </div>
+          <div class="col-lg-6 col-sm-6 text-center">
+            <img class="" src="2016/img/psflogo.png" alt="">
+            <br>
+            <a href="https://www.python.org/psf/"target="_blank">The Python Software Foundation</a>
+          </div>
+          <div class="col-lg-6 col-sm-6 text-center">
+            <img class="" src="2016/img/icfosslogo.jpeg" alt="">
+            <br>
+            <a href="http://icfoss.in/"target="_blank">International Centre for Free and Open Source Software</a>
+          </div>
           
+          <div>
+          <P>-</P>
+          <hr>
+          </div>
           <div class="col-lg-6 col-sm-6 text-center">
             <img class="" src="2016/img/reservedbit.png" alt="">
             <br>
