--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -1,99 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: default
+title: Schedule
+permalink: /schedule/
+feature-img: "assets/img/pexels/stargazingsmall.jpg"
+tags: [Schedule, workshops, Python]
+---
 
-<head>
+<div class="home">
+  {% if site.theme_settings.header_text %}
+  <div id="main" class="call-out"
+  style="background-image: url('{{ site.baseurl }}/{{ site.theme_settings.header_text_feature_image }}')">
+    {{ site.theme_settings.header_text }}
+  </div>
+  {% endif %}
+  
+  
 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Science Hack Day is a two-day event where anyone excited about making weird, silly or serious things with science comes together in the same physical space to see what they can prototype within 30 consecutive hours.">
-
-  <meta name="keywords" content="Science Hack, Science Hack India, Maker, Hacking, Science Workshops, Student Workshops, Hack Day Belgaum, Science Belagavi, SHD, Hackathon">
-  <meta name="author" content="">
-
-  <title>Science Hack Day India 2017 | Travel Guide</title>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-
-  <!-- Bootstrap Core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
-
-  <!-- Custom CSS -->
-  <link href="css/business-frontpage.css" rel="stylesheet">
-  <link href="css/custom.css" rel="stylesheet">
+  
 
 
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-  <![endif]-->
-
-</head>
-
-<body>
-
-  <!-- Navigation -->
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html">SHD 2017</a>
-      </div>
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-
-          <li>
-            <a href="mentors.html">Projects and Mentors</a>
-          </li>
-          <li>
-            <a href="workshops.html">Workshops</a>
-          </li>
-          <li>
-            <a href="travel.html">Travel</a>
-          </li>
-          <li>
-            <a href="coc.html">Code of Conduct</a>
-          </li>
-          <li>
-            <a href="team.html">Team</a>
-          </li>
-          <li>
-            <a href="in_progress.html">Sponsors</a>
-          </li>
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Schedule
-              <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="schedule.html">SHD Schedule</a></li>
-                <li><a href="scheduleworkshops.html">Workshops Schedule</a></li>
-              </ul>
-            </li>
-          <li>
-            <a href="http://sciencehackday.org/">Global SHD</a>
-          </li>
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="http://sciencehackday.org/">Previous SHD
-              <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="2016/index.html">SHD 2016</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-          <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-      </nav>
-      <div class="container">
+  
 
 
         <!-- Service Tabs -->
@@ -181,27 +107,4 @@
       </div>
       <!-- /.row -->
 
-      <hr>
-
-      <!-- Footer -->
-      <footer>
-        <div class="row">
-          <div class="col-lg-12">
-            <p>Science Hack Day Established 2010. Organized by the community.</p>
-          </div>
-        </div>
-        <!-- /.row -->
-      </footer>
-
-    </div>
-    <!-- /.container -->
-
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-
-  </body>
-
-  </html>
+   </div>  
