--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -5,16 +5,59 @@ permalink: /schedule/
 feature-img: "assets/img/pexels/stargazingsmall.jpg"
 tags: [Schedule, workshops, Python]
 ---
-      
+    Day 0 - Friday, 13th October 2017
+Session
+Time
+Activity
+Morning
+Early morning  to 9:00+
+Receiving the guests from bus stand/ railway station/airport  (Team??)
+Arrivals and Check-in 
+
+9:00 - 10:00
+Breakfast 
+
+10:00 - 1:00
+Organizing Stage and Workshop Spaces, Demo Installations and hacker space
+(Hacker participants and SHD team members will work together)
+Afternoon
+01:00 - 2:00
+Lunch  (Guests  and Volunteers)
+
+2:00-5:00
+Organizing Hacker Space, Installations and Exhibit Area..... demo tables...Rocks and minerals.. biological specimens ..VR ....science  gadgets ... display
+(Hacker participants and SHD team members will work together) (Soldering training to student volunteers by Jithin pooja and Praveen) (soldering coils and LED's)
+Evening
+5:00-5:30
+Chat with Chaat (tea and snacks)
+
+5:30 - 8:30
+Lightning talks, Discussions on hack ideas  and other un-conference activities
+(Example activities)
+Ripping apart a laptop by Siddhesh
+Crypto Currency/being secure online - Hitesh
+Eco-friendly stove by Prabhu  Sir
+Art, Design and Architecture -by Suyash
+Mhadei by Rahul
+Making of a maker space-by  Nisha  etc
+
+8:30
+Dinner
+Hacking Night 
+10:00 pm onwards
+Hackers night out  (Optional.... ) Stargazing - session I (HRJ?? or Atul Sane?? or Praveen??)
+  
+
+
+
+
         <div class="row">
           <div class="col-lg-12">
-            <h3 class="page-header">SHD India, Belgaum 2017 - Schedule</h3>
+            <h3 class="page-header">SHD India, Belgaum 2018 - Schedule</h3>
           </div>
-          <div class="col-lg-12">
-            
-            <h3><strong>Day 1- Saturday, 14th October 2017</strong></h3>
+          <div class="col-lg-12">            
+            <h4>Day 1- Saturday, 3rd November 2018 </h4>
             <hr>
-
             <li><strong>Morning Session</strong></li>
             <span id="tab"><h4><strong></strong></h4></span>
 
@@ -35,7 +78,7 @@ tags: [Schedule, workshops, Python]
 
             <ul>02:00 <span id="tab">Hacking continues....</span></ul>
 
-			<ul>05:00 <span id="tab">Chat with Chaat (tea and snacks at hackerspace)</span></ul>
+	    <ul>05:00 <span id="tab">Chat with Chaat (tea and snacks at hackerspace)</span></ul>
 
             <ul>06:30 <span id="tab"><strong>Lightning Talks</strong></span></ul>
 
@@ -43,12 +86,11 @@ tags: [Schedule, workshops, Python]
 
             <ul>10:00 <span id="tab">Hacking Night , Star Gazing Sessions etc...</span></ul>
 
-
             <ul> <span id="tab"></span></ul>
 
             <hr>
 
-			<h2><strong>Day 2- Sunday, 15th October 2017</strong></h2>
+	    <h2><strong>Day 2- Sunday, 4th November 2018</strong></h2>
 
 			<hr>
 
@@ -81,13 +123,7 @@ tags: [Schedule, workshops, Python]
             <ul>07:30 <span id="tab">Chat with Chaat. Gappa tappa, Ideas exchange, What next? </span></ul>
 
 			<hr>
-
-
-
           </div>
           <hr>
             </div>
       </div>
-      <!-- /.row -->
-
-   </div>  
