--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -14,7 +14,7 @@ tags: [Schedule, workshops, Python]
 		<hr>
 		<li><strong>Morning Session</strong></li>
 		<span id="tab"><h4><strong></strong></h4></span>
-		<ul>08:30 	<span id="tab"><span id="tab">Breakfast</span></span></ul>
+		<ul>08:30 	Breakfast </ul>
 
             	<ul>10:00 	<span id="tab"><span id="tab">Inaugural Function</span></span></ul>
 
