--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -14,9 +14,12 @@ tags: [Schedule, workshops, Python]
 		<hr>
 		<li><strong>Morning Session</strong></li>
 		<span id="tab"><h4><strong></strong></h4></span>
+		
+		<pre>
 		<ul>08:30 	Breakfastchanged </ul>
 
             	<ul>10:00 	<span id="tab"><span id="tab">Inaugural Function</span></span></ul>
+		</pre>
 
             	<ul>10:30 	<span id="tab">Introduction to Mentors, Mentors present their hack ideas</span></ul>
 
