--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -16,16 +16,16 @@ tags: [Schedule, workshops, Python]
 		<span id="tab"><h4><strong></strong></h4></span>
 		
 		<pre>
-		<ul>08:30 	Breakfastchanged </ul>
+		<ul>08:30 -  	Breakfast </ul>
 
-            	<ul>10:00 	<span id="tab"><span id="tab">Inaugural Function</span></span></ul>
+            	<ul>10:00 -  	<span id="tab"><span id="tab">Inaugural Function</span></span></ul>
 		</pre>
 
-            	<ul>10:30 	<span id="tab">Introduction to Mentors, Mentors present their hack ideas</span></ul>
+            	<ul>10:30 -  	<span id="tab">Introduction to Mentors, Mentors present their hack ideas</span></ul>
 
-            	<ul>11:00 	<span id="tab">Hacker participants form groups and move to hacker space, <strong>Hacking begins !</strong> </span></ul>
+            	<ul>11:00 -  	<span id="tab">Hacker participants form groups and move to hacker space, <strong>Hacking begins !</strong> </span></ul>
 
-            	<ul>01:30 	<span id="tab">Lunch (provided)</span></ul>
+            	<ul>01:30 -  	<span id="tab">Lunch (provided)</span></ul>
 
             	<hr>
 
