--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -15,12 +15,10 @@ tags: [Schedule, workshops, Python]
 		<li><strong>Morning Session</strong></li>
 		<span id="tab"><h4><strong></strong></h4></span>
 		
-		<pre>
 		<ul>08:30 -  	Breakfast </ul>
 
-            	<ul>10:00 -  	<span id="tab"><span id="tab">Inaugural Function</span></span></ul>
-		</pre>
-
+            	<ul>10:00 -  	Inaugural Function</ul>
+		
             	<ul>10:30 -  	<span id="tab">Introduction to Mentors, Mentors present their hack ideas</span></ul>
 
             	<ul>11:00 -  	<span id="tab">Hacker participants form groups and move to hacker space, <strong>Hacking begins !</strong> </span></ul>
@@ -32,15 +30,15 @@ tags: [Schedule, workshops, Python]
             	<li><strong>Afternoon Session</strong></li>
             	<span id="tab"><h4><strong></strong></h4></span>
 
-            	<ul>02:00 <span id="tab">Hacking continues....</span></ul>
+            	<ul>02:00 -  <span id="tab">Hacking continues....</span></ul>
 
-	    	<ul>05:00 <span id="tab">Chat with Chaat (tea and snacks at hackerspace)</span></ul>
+	    	<ul>05:00 -  <span id="tab">Chat with Chaat (tea and snacks at hackerspace)</span></ul>
 
-            	<ul>06:30 <span id="tab"><strong>Lightning Talks</strong></span></ul>
+            	<ul>06:30 -  <span id="tab"><strong>Lightning Talks</strong></span></ul>
 
-            	<ul>08:30 <span id="tab">Dinner</span></ul>
+            	<ul>08:30 -  <span id="tab">Dinner</span></ul>
 
-            	<ul>10:00 <span id="tab">Hacking Night , Star Gazing Sessions etc...</span></ul>
+            	<ul>10:00 -  <span id="tab">Hacking Night , Star Gazing Sessions etc...</span></ul>
 
             	<ul> <span id="tab"></span></ul>
 
@@ -53,11 +51,11 @@ tags: [Schedule, workshops, Python]
             	<li><strong>Morning Session</strong></li>
             	<span id="tab"><h4><strong></strong></h4></span>
 
-		<ul>08:30 	<span id="tab"><span id="tab">Breakfast</span></span></ul>
+		<ul>08:30 -  	<span id="tab"><span id="tab">Breakfast</span></span></ul>
 
-            	<ul>09:30 	<span id="tab">Hacking Continues...</span></span></ul>
+            	<ul>09:30 -  	<span id="tab">Hacking Continues...</span></span></ul>
 
-            	<ul>01:00 	<span id="tab">Lunch</span></ul>
+            	<ul>01:00 -  	<span id="tab">Lunch</span></ul>
 
             	<hr>
 
@@ -65,17 +63,17 @@ tags: [Schedule, workshops, Python]
 
             	<span id="tab"><h4><strong></strong></h4></span>
 
-            	<ul>02:00 <span id="tab"><strong>Let's Frame it ! </strong> SHD Group Photo with Hackers and young scientists </span></ul>
+            	<ul>02:00 -  <span id="tab"><strong>Let's Frame it ! </strong> SHD Group Photo with Hackers and young scientists </span></ul>
 
-            	<ul>02:15 <span id="tab"><strong>Make it presentable</strong> Finishing touch- preparing presentations. Hack ideas/prototypes/demo setups moved to main hall for display</span></ul>
+            	<ul>02:15 -  <span id="tab"><strong>Make it presentable</strong> Finishing touch- preparing presentations. Hack ideas/prototypes/demo setups moved to main hall for display</span></ul>
 
-            	<ul>03:15 <span id="tab">Students interact with hackers.  People/students see the hacks and vote (Parents of registered students are invited at 3.00pm) </span></ul>
+            	<ul>03:15 -  <span id="tab">Students interact with hackers.  People/students see the hacks and vote (Parents of registered students are invited at 3.00pm) </span></ul>
 
-            	<ul>04:00 <span id="tab">Snack time... People visit the exhibit area.</span></ul>
+            	<ul>04:00 -  <span id="tab">Snack time... People visit the exhibit area.</span></ul>
 
-		<ul>04:30 <span id="tab"><strong>Valedictary function</strong>. Winning teams announced & given SHD India medals</span></ul>
+		<ul>04:30 -  <span id="tab"><strong>Valedictary function</strong>. Winning teams announced & given SHD India medals</span></ul>
 
-            	<ul>07:30 <span id="tab">Chat with Chaat. Gappa tappa, Ideas exchange, What next? </span></ul>
+            	<ul>07:30 -  <span id="tab">Chat with Chaat. Gappa tappa, Ideas exchange, What next? </span></ul>
 
 		<hr>
 	</div>
