--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -10,6 +10,40 @@ tags: [Schedule, workshops, Python]
 		<h3 class="page-header">SHD India, Belgaum 2018 - Schedule</h3>
 	</div>
 	<div class="col-lg-12">
+		<h4>Day 0- Friday, 2nd November 2018 </h4>
+		<hr>
+		<li><strong>Morning Session</strong></li>
+		<span id="tab"><h4><strong></strong></h4></span>
+		<ul>Early Morning -  	Arrivals, Receiving the guests </ul>
+		<ul>09.00 -  	Breakfast </ul>
+
+            	<ul>10:00 -  	Organizing the Stage, Workshop Spaces, Demo Installations and Hackerspace</ul>
+		
+            	<ul>01:00 -  	Lunch </span></ul>
+		<hr>
+		<li><strong>Afternoon Session</strong></li>
+            	<span id="tab"><h4><strong></strong></h4></span>
+
+            	<ul>02:00 -  	Workshops begin </ul>
+		<pre>	Workshop I   -	Soldering training to student volunteers 
+			Workshop II  - 	Python 101 for young scientists and Engineers
+			Workshop III - 	Python Powered Science Lab tools
+			
+            	<ul>04:30 -  	High Tea</ul>           	
+
+            	<ul>04:30 -  Woekshops continue....</ul>
+
+	    	<ul>06:00 -  <span id="tab">Chat with Chaat (tea and snacks at hackerspace)</span></ul>
+
+            	<ul>06:30 -  <span id="tab"><strong>Lightning Talks</strong></span></ul>
+
+            	<ul>08:30 -  <span id="tab">Dinner</span></ul>
+
+            	<ul>10:00 -  <span id="tab">Hacking Night , Star Gazing Sessions etc...</span></ul>
+
+            	<ul> <span id="tab"></span></ul>
+
+            	<hr>
 		<h4>Day 1- Saturday, 3rd November 2018 </h4>
 		<hr>
 		<li><strong>Morning Session</strong></li>
