--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -25,9 +25,9 @@ tags: [Schedule, workshops, Python]
             	<span id="tab"><h4><strong></strong></h4></span>
 
             	<ul>02:00 -  	Workshops begin </ul>
-		<pre>	Workshop I   -	Soldering training to student volunteers 
+		<pre>		Workshop I   -	Soldering training to student volunteers 
 			Workshop II  - 	Python 101 for young scientists and Engineers
-			Workshop III - 	Python Powered Science Lab tools
+			Workshop III - 	Python Powered Science Lab tools</pre>
 			
             	<ul>04:30 -  	High Tea</ul>           	
 
