--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -56,7 +56,13 @@ tags: [Schedule, workshops, Python]
             	<ul>10:30 -  	<span id="tab">Introduction to Mentors, Mentors present their hack ideas</span></ul>
 
             	<ul>11:00 -  	<span id="tab">Hacker participants form groups and move to hacker space, <strong>Hacking begins !</strong> </span></ul>
-
+		
+		<ul>11:00 -  	Workshops for students participants</ul> 
+	
+		<pre>		Workshop IV   -	Science Toys from Trash for highschool kids
+				Workshop V  - 	Soldering RBG LED Badge
+				Workshop VI - 	Microcontrollers for scientific data logging </pre>
+		
             	<ul>01:30 -  	<span id="tab">Lunch (provided)</span></ul>
 
             	<hr>
