--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -25,10 +25,13 @@ tags: [Schedule, workshops, Python]
             	<span id="tab"><h4><strong></strong></h4></span>
 
             	<ul>02:00 -  	Workshops begin </ul>
-		<ul>	<ul>
-			<li>Workshop I   -	Soldering training to student volunteers</li> 
-			<li>Workshop II  - 	Python 101 for young scientists and Engineers</li>
-			<li>Workshop III - 	Python Powered Science Lab tools</li>
+		<ul>
+			<ul>
+				<ul>
+					<li>Workshop I   -	Soldering training to student volunteers</li> 
+					<li>Workshop II  - 	Python 101 for young scientists and Engineers</li>
+					<li>Workshop III - 	Python Powered Science Lab tools</li>
+				</ul>
 			</ul>
 		</ul>
 			
@@ -40,7 +43,7 @@ tags: [Schedule, workshops, Python]
 
             	<ul>06:30 -  <span id="tab"><strong>Lightning Talks</strong></span></ul>
 
-            	<ul>08:30 -  <span id="tab">Dinner</span></ul>
+            	<ul>08:30 -  <span id="tab">Dinner </span></ul>
 
             	<ul>10:00 -  <span id="tab">Hacking Night , Star Gazing Sessions etc...</span></ul>
 
@@ -61,12 +64,17 @@ tags: [Schedule, workshops, Python]
             	<ul>11:00 -  	<span id="tab">Hacker participants form groups and move to hacker space, <strong>Hacking begins !</strong> </span></ul>
 		
 		<ul>11:00 -  	Workshops for students participants</ul> 
-	
-		<pre>		Workshop IV   -	Science Toys from Trash for highschool kids
-				Workshop V  - 	Soldering RBG LED Badge
-				Workshop VI - 	Microcontrollers for scientific data logging </pre>
+		<ul>
+			<ul>
+				<ul>
+					<li>Workshop IV   -	Science Toys for highschool kids</li> 
+					<li>Workshop V  - 	Soldering RBG LED Badge</li>
+					<li>Workshop VI - 	Microcontrollers for scientific data logging</li>
+				</ul>
+			</ul>
+		</ul>		
 		
-            	<ul>01:30 -  	<span id="tab">Lunch (provided)</span></ul>
+            	<ul>01:30 -  	<span id="tab">Lunch </span></ul>
 
             	<hr>
 
