--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -10,7 +10,7 @@ tags: [Schedule, workshops, Python]
 		<h3 class="page-header">SHD India, Belgaum 2018 - Schedule</h3>
 	</div>
 	<div class="col-lg-12">
-		<h4>Day 0- Friday, 2nd November 2018 </h4>
+	<h3><font color="blue">Day 0- Friday, 2nd November 2018</font> </h3>
 		<hr>
 		<li><strong>Morning Session</strong></li>
 		<span id="tab"><h4><strong></strong></h4></span>
@@ -50,7 +50,7 @@ tags: [Schedule, workshops, Python]
             	<ul> <span id="tab"></span></ul>
 
             	<hr>
-		<h4>Day 1- Saturday, 3rd November 2018 </h4>
+	<h3><font color="blue">Day 1- Saturday, 3rd November 2018</font> </h3>
 		<hr>
 		<li><strong>Morning Session</strong></li>
 		<span id="tab"><h4><strong></strong></h4></span>
@@ -95,7 +95,7 @@ tags: [Schedule, workshops, Python]
 
             	<hr>
 
-	    	<h2><strong>Day 2- Sunday, 4th November 2018</strong></h2>
+	    <h3><font color="blue">Day 2- Sunday, 4th November 2018</font></h3>
 
 		<hr>
 
