--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -10,9 +10,9 @@ tags: [Schedule, workshops, Python]
 		<h3 class="page-header">SHD India, Belgaum 2018 - Schedule</h3>
 	</div>
 	<div class="col-lg-12">
-	<h3><font color="blue">Day 0- Friday, 2nd November 2018</font> </h3>
+	<h3><font color="#12124E">Day 0- Friday, 2nd November 2018</font> </h3>
 		<hr>
-		<li><strong>Morning Session</strong></li>
+		<ul><strong>Morning Session</strong></ul>
 		<span id="tab"><h4><strong></strong></h4></span>
 		<ul>Early Morning -  	Arrivals, Receiving the guests </ul>
 		<ul>09.00 -  	Breakfast </ul>
