--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -7,10 +7,10 @@ tags: [Schedule, workshops, Python]
 ---
 <div class="row">
 	<div class="col-lg-12">
-		<h3 class="page-header">SHD India, Belgaum 2018 - Schedule</h3>
+		<h2 class="page-header"> <font color="#12124E"> SHD India, Belgaum 2018 - Schedule</font></h2>
 	</div>
 	<div class="col-lg-12">
-	<h3><font color="#12124E">Day 0- Friday, 2nd November 2018</font> </h3>
+	<h3><font color="#494976">Day 0- Friday, 2nd November 2018</font> </h3>
 		<hr>
 		<ul><strong>Morning Session</strong></ul>
 		<span id="tab"><h4><strong></strong></h4></span>
@@ -21,7 +21,7 @@ tags: [Schedule, workshops, Python]
 		
             	<ul>01:00 -  	Lunch </span></ul>
 		<hr>
-		<li><strong>Afternoon Session</strong></li>
+		<ul><strong>Afternoon Session</strong></ul>
             	<span id="tab"><h4><strong></strong></h4></span>
 
             	<ul>02:00 -  	Workshops begin </ul>
@@ -50,9 +50,9 @@ tags: [Schedule, workshops, Python]
             	<ul> <span id="tab"></span></ul>
 
             	<hr>
-	<h3><font color="blue">Day 1- Saturday, 3rd November 2018</font> </h3>
+	<h3><font color="#494976">Day 1- Saturday, 3rd November 2018</font> </h3>
 		<hr>
-		<li><strong>Morning Session</strong></li>
+		<ul><strong>Morning Session</strong></ul>
 		<span id="tab"><h4><strong></strong></h4></span>
 		
 		<ul>08:30 -  	Breakfast </ul>
@@ -78,7 +78,7 @@ tags: [Schedule, workshops, Python]
 
             	<hr>
 
-            	<li><strong>Afternoon Session</strong></li>
+            	<ul><strong>Afternoon Session</strong></ul>
             	<span id="tab"><h4><strong></strong></h4></span>
 
             	<ul>02:00 -  <span id="tab">Hacking continues....</span></ul>
@@ -95,11 +95,11 @@ tags: [Schedule, workshops, Python]
 
             	<hr>
 
-	    <h3><font color="blue">Day 2- Sunday, 4th November 2018</font></h3>
+	    <h3><font color="#494976">Day 2- Sunday, 4th November 2018</font></h3>
 
 		<hr>
 
-            	<li><strong>Morning Session</strong></li>
+            	<ul><strong>Morning Session</strong></ul>
             	<span id="tab"><h4><strong></strong></h4></span>
 
 		<ul>08:30 -  	<span id="tab"><span id="tab">Breakfast</span></span></ul>
@@ -110,7 +110,7 @@ tags: [Schedule, workshops, Python]
 
             	<hr>
 
-            	<li><strong>Afternoon Session</strong></li>
+            	<ul><strong>Afternoon Session</strong></ul>
 
             	<span id="tab"><h4><strong></strong></h4></span>
 
