--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -3,11 +3,11 @@ layout: page
 title: Schedule
 permalink: /schedule/
 feature-img: "assets/img/pexels/stargazingsmall.jpg"
-tags: [Schedule, workshops, Python]
+tags: [Schedule, Workshops, Python, ExpEYES, Scipy]
 ---
 <div class="row">
 	<div class="col-lg-12">
-		<h2 class="page-header"> <font color="#12124E"> SHD India, Belgaum 2018 - Schedule</font></h2>
+		<h2 class="page-header"> <font color="#494976"> SHD India, Belgaum 2018 - Schedule</font></h2>
 	</div>
 	<div class="col-lg-12">
 	<h3><font color="#494976">Day 0- Friday, 2nd November 2018</font> </h3>
