--- a/pages/team.html
+++ b/pages/team.html
@@ -12,7 +12,7 @@ tags: [About, Archive]
           <h2 class="page-header">Organizing Team</h2>
         </div>
          <div class="col-lg-4 col-sm-6 text-center">
-          <img class="img-circle img-responsive img-center" src={{site.baseurl}}/assets/img/prabhusy.jpg" alt="">
+          <img src={{site.baseurl}}/assets/img/prabhusy.jpg" alt="">
           <h3>Shrikrishna Prabhu
             <small></small>
           </h3>
