--- a/pages/team.html
+++ b/pages/team.html
@@ -13,7 +13,7 @@ tags: [About, Archive]
         </div>
          <div class="col-lg-4 col-sm-6 text-center">
           <img src={{site.baseurl}}/assets/img/prabhusy.jpg" alt="">
-          <h3>Shrikrishna Prabhu
+          <h3>Shrikrishna Prabhu1
             <small></small>
           </h3>
           <p>Professor in Zoology, Environmentalist, Ex-Principal GSS College, Founder member 'Paryavarni' and Nature Lovers Club Belgaum</p>
