--- a/pages/team.html
+++ b/pages/team.html
@@ -11,19 +11,47 @@ tags: [About, Archive]
         </div>
        
         </div>
-    <div class="col-lg-4 col-sm-6 text-center">
-        <img class="img-circle img-responsive" style="margin: 0 auto;" src="http://placehold.it/200x200"
-        alt="">
-        
-<h3>John Smith <small>Job Title</small></h3>
-
-        <p>What does this team member to? Keep it short! This is also a great spot
-            for social links!</p>
+    <div class="row">
+  <div class="column">
+    <div class="card">
+      <img class="img-circle img-responsive img-center" src="{{site.baseurl}}/assets/img/prabhusy.jpg" alt=""style="width:100%">
+      <div class="container">
+        <h2>Jane Doe</h2>
+        <p class="title">CEO &amp; Founder</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>example@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
     </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+      <img src="img2.jpg" alt="Mike" style="width:100%">
+      <div class="container">
+        <h2>Mike Ross</h2>
+        <p class="title">Art Director</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>example@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+      <img src="img3.jpg" alt="John" style="width:100%">
+      <div class="container">
+        <h2>John Doe</h2>
+        <p class="title">Designer</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>example@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+</div> 
          <div class="col-lg-4 col-sm-6 text-center">
-          <p>
- <a href="http://sankalphospitality.in" target="_blank" ><img src="{{site.baseurl}}/assets/img/sankalpbhoomi.jpg" alt="Sankalpbhoomi"></a>
-</P> 
           <img class="img-circle img-responsive img-center" src="{{site.baseurl}}/assets/img/prabhusy.jpg" alt="">
           <h3>Shrikrishna Prabhu
             <small></small>
