--- a/pages/team.html
+++ b/pages/team.html
@@ -14,7 +14,7 @@ tags: [About, Archive]
     <div class="row">
   <div class="column">
     <div class="card">
-      <img class="img-circle img-responsive img-center" src="{{site.baseurl}}/assets/img/prabhusy.jpg" alt=""style="width:100%">
+      <img class="circle img-responsive img-center" src="{{site.baseurl}}/assets/img/prabhusy.jpg" alt=""style="width:100%">
       <div class="container">
         <h2>Jane Doe</h2>
         <p class="title">CEO &amp; Founder</p>
