--- a/pages/team.html
+++ b/pages/team.html
@@ -17,8 +17,7 @@ tags: [About, Archive]
       <img class="circle img-responsive img-center" src="{{site.baseurl}}/assets/img/prabhusy.jpg" alt=""style="width:100%">
       <div class="container">
         <h2>Jane Doe</h2>
-        <p class="title">CEO &amp; Founder</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p text align="center"> Some text that describes me lorem ipsum ipsum lorem.</p>
         <p>example@example.com</p>
         <p><button class="button">Contact</button></p>
       </div>
