--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -24,19 +24,19 @@ tags: [Schedule, Workshops, Python, ExpEYES, Scipy]
 		<ul><strong>Afternoon Session</strong></ul>
             	<span id="tab"><h4><strong></strong></h4></span>
 
-            	<ul>02:00 -  	Workshops for Volunters and College Students begin </ul>
+            	<ul>02:00 -  	Training Session for Volunters and Workshop for College Students </ul>
 		<ul>
 			<ul>
 				<ul>
-					<li> Workshop   -	Soldering training to student volunteers</li> 
-					<li> Workshop   - 	Python 101 for young scientists and Engineers</li>
+					<li> <strong>Train the Trainers</strong>  - Soldering training to student volunteers</li> 
+					<li> <strong>Python Workshop I</strong>  - 	Python 101 for young scientists and Engineers</li>
 				</ul>
 			</ul>
 		</ul>
 			
             	<ul>04:30 -  	High Tea</ul>           	
 
-            	<ul>04:30 -  Woekshops continue....</ul>
+            	<ul>04:30 -  Workshops continue....</ul>
 
 	    	<ul>06:00 -  <span id="tab">Chat with Chaat (tea and snacks at hackerspace)</span></ul>
 
@@ -85,7 +85,7 @@ tags: [Schedule, Workshops, Python, ExpEYES, Scipy]
 			<ul>
 				<ul>
 					<li><strong>Workshop I  - Session II </strong>: Science Toys from Trash</li> 
-					<li><strong>Python Workshop - Session II </strong>: Science and Engineering Experiments with <strong>ExpEYES</strong></li>
+					<li><strong>Python Workshop II</strong>: Science and Engineering Experiments with <strong>ExpEYES</strong></li>
 				</ul>
 			</ul>
 		</ul>		
