--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -24,12 +24,12 @@ tags: [Schedule, Workshops, Python, ExpEYES, Scipy]
 		<ul><strong>Afternoon Session</strong></ul>
             	<span id="tab"><h4><strong></strong></h4></span>
 
-            	<ul>02:00 -  	Training Session for Volunters and Workshop for College Students </ul>
+            	<ul>02:00 -  	Preparation -Training Session for Volunters and Workshop for College Students </ul>
 		<ul>
 			<ul>
 				<ul>
-					<li> <strong>Train the Trainers</strong>  - Soldering training to student volunteers</li> 
-					<li> <strong>Python Workshop I</strong>  - 	Python 101 for young scientists and Engineers</li>
+					<li> 2:30 <strong>Train the Trainers</strong>  - Soldering training to student volunteers</li> 
+					<li> 3:00 <strong>Python Workshop I</strong>  - 	Python 101 for young scientists and Engineers</li>
 				</ul>
 			</ul>
 		</ul>
