--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -24,7 +24,7 @@ tags: [Schedule, Workshops, Python, ExpEYES, Scipy]
 		<ul><strong>Afternoon Session</strong></ul>
             	<span id="tab"><h4><strong></strong></h4></span>
 
-            	<ul>02:00 -  	Preparation -Training Session for Volunters and Workshop for College Students </ul>
+            	<ul>02:00 -  	Preparation -Training Session for Volunteers and Workshop for College Students </ul>
 		<ul>
 			<ul>
 				<ul>
@@ -36,9 +36,7 @@ tags: [Schedule, Workshops, Python, ExpEYES, Scipy]
 			
             	<ul>04:30 -  	High Tea</ul>           	
 
-            	<ul>04:30 -  Workshops continue....</ul>
-
-	    	<ul>06:00 -  <span id="tab">Chat with Chaat (tea and snacks at hackerspace)</span></ul>
+            	<ul>06:00 -  <span id="tab">Chat with Chaat (tea and snacks at hackerspace)</span></ul>
 
             	<ul>06:30 -  <span id="tab"><strong>Lightning Talks</strong></span></ul>
 
