--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -115,7 +115,7 @@ tags: [Schedule, Workshops, Python, ExpEYES, Scipy]
 		<ul>
 			<ul>
 				<ul>
-					<li><strong>Workshop II</strong>   Microcontroller Programming with Arduino</li> 
+					<li><strong>Workshop II</strong>  :   Microcontroller Programming with Arduino</li> 
 				</ul>
 			</ul>
 		</ul>		
@@ -130,13 +130,13 @@ tags: [Schedule, Workshops, Python, ExpEYES, Scipy]
 
             	<ul>02:00 -  <span id="tab"><strong>Let's Frame it ! </strong> SHD Group Photo with Hackers and young scientists </span></ul>
 
-            	<ul>02:15 -  <span id="tab"><strong>Make it presentable</strong> Finishing touch- preparing presentations. Hack ideas/prototypes/demo setups moved to main hall for display</span></ul>
+            	<ul>02:15 -  <span id="tab"><strong>Make it presentable</strong>  : Finishing touch- preparing presentations. Hack ideas/prototypes/demo setups to be moved to main hall for display before 3:30</span></ul>
 
             	<ul>02:30 -  <span id="tab">Science Demos  </span></ul>
 
-            	<ul>04:00 -  <span id="tab">Students, parents and Judges interact with hackers see the hacks/installations.</span></ul>
+            	<ul>04:00 -  <span id="tab">Students, parents and judges interact with hackers and see the hacks/installations.</span></ul>
 
-		<ul>04:30 -  <span id="tab"><strong>Valedictary function</strong>. Teams present their hacks, Prople vote Popular Hack/People's Choice Award, award Winning teams announced & given SHD India medals</span></ul>
+		<ul>04:30 -  <span id="tab"><strong>Valedictary function</strong>. Teams present their hacks, Prople vote <strong>People's Choice Award </strong>,  Award Winning teams announced & given SHD India medals</span></ul>
 
             	<ul>07:30 -  <span id="tab">Chat with Chaat. Gappa tappa, Ideas exchange, What next? </span></ul>
 
